[package]
name = "shut2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
serenity = { version = "0.11.1", default-features=false, features=["cache", "client", "gateway", "http", "rustls_backend", "model", "framework", "standard_framework"]}
dotenv = "0.15.0"
sqlite = "0.26.0"